--- a/Templates/components/navigation.html.twig
+++ b/Templates/components/navigation.html.twig
@@ -22,7 +22,7 @@
 							<a class="nav-link" aria-current="page" href="{{ path('app_produit_femme') }}">Femme</a>
 						</li>
 						<li>
-							<a class="nav-link" aria-current="page" href"#">Essai Virtuel</a>
+							<a class="nav-link" aria-current="page" href="{{ path('app_mode') }}">Essai Virtuel</a>
 						</li>
 						
 						<li class="nav-item dropdown">
@@ -48,6 +48,11 @@
 								<i class="fa-solid fa-user"></i>
 							</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="{{ path('message_list') }}">
+								<i class="fa-solid fa-envelope"></i>
+							</a>
+						</li>
 
 					</li>
 					<li class="nav-item">
@@ -69,7 +74,7 @@
 						<a class="nav-link" aria-current="page" href="{{ path('app_produit_femme') }}">Femme</a>
 					</li>
 						<li>
-							<a class="nav-link" aria-current="page" href"#">Essai Virtuel</a>
+							<a class="nav-link" aria-current="page" href="{{ path('app_mode') }}">Essai Virtuel</a>
 						</li>
 
 					<li class="nav-item dropdown">
@@ -94,6 +99,11 @@
 					<i class="fa-solid fa-user fa-1x"></i></a>
 					</li>
 					<li class="nav-item">
+							<a class="nav-link" aria-current="page" href="{{ path('message_list') }}">
+								<i class="fa-solid fa-envelope"></i>
+							</a>
+						</li>
+					<li class="nav-item">
 						<a class="nav-link" href="{{ path('app_logout') }}">Se déconnecter</a>
 					</li>
 				</ul>
@@ -111,7 +121,7 @@
 						<a class="nav-link" aria-current="page" href="{{ path('app_produit_femme') }}">Femme</a>
 					</li>
 					<li>
-							<a class="nav-link" aria-current="page" href"#">Essai Virtuel</a>
+							<a class="nav-link" aria-current="page" href="{{ path('app_mode') }}">Essai Virtuel</a>
 					</li>
 
 					<li class="nav-item dropdown">
