--- a/Templates/produits/affichage.html.twig
+++ b/Templates/produits/affichage.html.twig
@@ -17,7 +17,10 @@
 
 				<div class="col-md-4 d-flex align-items-stretch">
 					<div class="card mb-4">
-						<img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}" class="card-img-top">
+					<div class="image-container">
+						<img src="{{ asset(produit.image) }}" alt="{{ produit.nom }}" 
+						class="card-img-top">
+					</div>	
 						<div class="card-body">
 							<h5 class="card-title">{{ produit.nom }}</h5>
 							<p class="card-text">{{ produit.couleur }}</p>
@@ -49,16 +52,20 @@
 							</div>
 						</div>
 						{% if is_granted('ROLE_ADMIN') %}
+						<div class="button-admin-container">
 							<a href="{{ path('app_modification', {'id': produit.id }) }}">
 								<button type="submit" class="btn btn-dark light btn-hover mt-2">
 									<i class="fa-solid fa-pen" aria-hidden="true"></i>
+									Modifier
 								</button>
 							</a>
 							<a href="{{ path('app_produits_supprime', {'id': produit.id }) }}?token={{ csrf_token('suppression') }}">
 								<button type="submit" class="btn btn-danger mt-2">
 									<i class="fa-solid fa-trash" aria-hidden="true"></i>
+									Supprimer
 								</button>
 							</a>
+							</div>
 						{% endif %}
 					</div>
 				</div>
