--- a/Templates/base.html.twig
+++ b/Templates/base.html.twig
@@ -13,9 +13,7 @@
 réseaux sociaux et les méta twitter #}
 {% endblock %}
 <link
-rel="icon" href="data:image/svg+xml,<svg
-xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text
-y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+rel="icon" href="{{ asset('assets/img/icon/logo_3.png') }}">
 {# Run `composer require symfony/webpack-encore-bundle` to start using
 Symfony UX #}
 <link
