--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1,3 +1,9 @@
 .btn-hover:hover {
     background-color: #9105DD;
 }
+.text-hover {
+    color: black;
+}
+.text-hover:hover {
+    color: #9105DD;
+}
