--- a/Templates/base.html.twig
+++ b/Templates/base.html.twig
@@ -13,7 +13,7 @@
 réseaux sociaux et les méta twitter #}
 {% endblock %}
 <link
-rel="icon" href="{{ asset('assets/img/icon/logo_3.png') }}">
+rel="icon" href="{{ asset('assets/img/icon/logo_final.png') }}">
 {# Run `composer require symfony/webpack-encore-bundle` to start using
 Symfony UX #}
 <link
