--- a/Templates/produits/modification.html.twig
+++ b/Templates/produits/modification.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello Modification produits!{% endblock %}
+{% block title %}Modification produits!{% endblock %}
 
 {% block body %}
 <style>
