--- a/Templates/try_on/index.html.twig
+++ b/Templates/try_on/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Categorie{% endblock %}
+{% block title %}TryOn{% endblock %}
 
 {% block body %}
 <style>
@@ -9,7 +9,6 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Catégories</h1>
     {{ form_start(form) }}
     {{ form_end(form) }}
 </div>
