--- a/Templates/mon_compte/index.html.twig
+++ b/Templates/mon_compte/index.html.twig
@@ -58,12 +58,12 @@
             <p>
 			{{ photo.commentaire }}
 			</p>
-            <a href="{{ path('app_try_on', {'id': photo.id }) }}">
+            <a href="{{ path('app_modification_try_on', {'id': photo.id }) }}">
 			<button type="submit" class="btn btn-dark text-light mt-2 btn-hover">
             <i class="fa-solid fa-pen" aria-hidden="true"></i>
 				Modifier</button>
 
-            <a href="{{ path('app_try_on', {'id': photo.id }) }}?token={{ csrf_token('suppression') }}">
+            <a href="{{ path('app_supprime_try_on', {'id': photo.id }) }}?token={{ csrf_token('suppression') }}" onclick="return confirm('Êtes-vous sûr de vouloir supprimer la photo?')">
 									<button type="submit" class="btn btn-danger mt-2">
 										<i class="fa-solid fa-trash" aria-hidden="true"></i>
 										Supprimer
