--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto:wght@100&display=swap');
+
+
+body {
+    font-family:'Montserrat', sans-serif;
+}
+p {
+    font-family: 'Roboto', sans-serif !important;
+}
 .btn-hover:hover {
     background-color: #9105DD;
 }
