--- a/Templates/components/footer.html.twig
+++ b/Templates/components/footer.html.twig
@@ -23,6 +23,9 @@
 			<div class="col-md-12 mx-auto">
 				<ul class="footer-links text-center flex-nowrap">
 					<li>
+						<a href="{{ path('app_qui_sommes_nous' )}}">Qui sommes-nous</a>
+					</li>
+					<li>
 						<a href="#">FAQ</a>
 					</li>
 					<li>
@@ -35,16 +38,13 @@
 						<a href="{{ path('app_contact') }}">Aide et Contact</a>
 					</li>
 					<li>
-						<a href="#">Réseaux sociaux</a>
-					</li>
-					<li>
 						<a href="#">Blog</a>
 					</li>
 				</ul>
 				<ul class="footer-links text-center flex-nowrap">
-					<li><a href="#">CGV</a></li>
-					<li><a href="#">CGU</a></li>
-					<li><a href="#">Charte de confidentialité</a></li>
+					<li><a href="{{ path('app_cgv') }}">CGV</a></li>
+					<li><a href="{{ path('app_cgu') }}">CGU</a></li>
+					<li><a href="{{ path('app_politique_de_confidentialite') }}">Charte de confidentialité</a></li>
 				</ul>
 			</div>
 		</div>
