--- a/Templates/components/navigation.html.twig
+++ b/Templates/components/navigation.html.twig
@@ -86,11 +86,10 @@
 								<a class="dropdown-item" href="{{ path('app_affichage') }}">Produits</a>
 							</li>
 							<li>
-								<a class="dropdown-item" href="#">Another action</a>
+								<a class="dropdown-item" href="{{ path('app_produit_homme') }}">Homme</a>
 							</li>
-							<li><hr class="dropdown-divider"></li>
 							<li>
-								<a class="dropdown-item" href="#">Something else here</a>
+								<a class="dropdown-item" href="{{ path('app_produit_femme') }}">Femme</a>
 							</li>
 						</ul>
 					</li>
@@ -133,11 +132,10 @@
 								<a class="dropdown-item" href="{{ path('app_affichage') }}">Produits</a>
 							</li>
 							<li>
-								<a class="dropdown-item" href="#">Another action</a>
+								<a class="dropdown-item" href="{{ path('app_produit_homme') }}">Homme</a>
 							</li>
-							<li><hr class="dropdown-divider"></li>
 							<li>
-								<a class="dropdown-item" href="#">Something else here</a>
+								<a class="dropdown-item" href="{{ path('app_produit_femme') }}">Femme</a>
 							</li>
 						</ul>
 					</li>
