--- a/Templates/home/index.html.twig
+++ b/Templates/home/index.html.twig
@@ -4,23 +4,62 @@
 {% endblock %}
 
 {% block body %}
-	
-<div class="container">
-	<h1>ModeTry 'Vos vêtement, Votre silouhette, Votre style'
-		{{ controller_name }}
-	</h1>
-	<div class="row">
-		<div class="col">
-			<img src="{{ asset('assets/img/photos/page.webp') }}" class="page">
-		</div>
-		<div class="col">
-			<img src="{{ asset('assets/img/photos/men.webp') }}" class="men">
-		</div>
-		<div class="col mt-5">
-			<img src="{{ asset('assets/img/photos/bascket.webp') }}" class="jean">
-		</div>
-		<div class="col mt-5">
-			<img src="{{ asset('assets/img/photos/escarpin noir.webp') }}" class="jean">
+
+	<div class="container">
+		<h1>ModeTry 'Vos vêtement, Votre silouhette, Votre style'
+			{{ controller_name }}
+		</h1>
+		<h2 class='h4'>
+			L'essayage virtuel de chez vous
+		</h2>
+		<h4>
+			<p>
+				Essayage Virtuel Révolutionnaire avec ModeTry
+				Découvrez une expérience d'achat en ligne inédite avec ModeTry, le leader de l'essayage virtuel. Plongez dans un univers où la technologie rencontre la mode pour redéfinir votre style, votre silhouette, votre mode de consommation.
+			</p>
+			<p>
+				Chez ModeTry, nous croyons que choisir ses vêtements en ligne devrait être aussi engageant et personnel que dans une boutique physique. Notre plateforme novatrice offre une immersion totale dans l'univers de la mode, grâce à une technologie d'essayage virtuel qui transcende les simples images sur un écran.
+			</p>
+
+
+		</h4>
+		<div class="row">
+			<div class="col">
+				<img src="{{ asset('assets/img/photos/page.webp') }}" class="page">
+			</div>
+			<div class="col">
+				<img src="{{ asset('assets/img/photos/men.webp') }}" class="men">
+			</div>
+			<h4>
+				<p>
+					La Magie de l'Essayage Virtuel
+					Notre technologie de réalité virtuelle de pointe permet aux utilisateurs de visualiser, d'ajuster et d'essayer virtuellement une vaste sélection de vêtements et d'accessoires, le tout depuis le confort de leur domicile. Respirez la texture des tissus, visualisez la coupe sous tous les angles, et personnalisez chaque tenue pour qu'elle s'adapte parfaitement à votre silhouette unique.
+				</p>
+				<p>
+					Moins de Retours, Plus de Satisfaction
+					ModeTry s'engage à réduire l'incertitude liée à l'achat en ligne en minimisant les retours. Grâce à notre essayage virtuel réaliste, vous prenez des décisions éclairées, réduisant ainsi l'impact environnemental des retours excessifs. Moins de retours signifie également une satisfaction client accrue, et c'est là que réside la véritable révolution de ModeTry.
+				</p>
+				<p>
+					Découvrez Votre Style Unique
+					Explorez les dernières tendances de la mode, des tenues décontractées aux looks formels, et essayez-les virtuellement pour découvrir votre style unique. Chaque clic sur ModeTry est une invitation à explorer, expérimenter et adopter votre propre histoire de la mode.
+				</p>
+				<p>
+					Sécurité et Confidentialité
+					Chez ModeTry, la sécurité de vos données est notre priorité. Notre plateforme garantit une expérience d'essayage virtuel sécurisée, protégeant vos informations personnelles à chaque étape. Découvrez la mode en toute tranquillité d'esprit.
+				</p>
+				<p>
+					Rejoignez la Révolution de la Mode en Ligne
+					ModeTry n'est pas simplement une plateforme d'achat en ligne, c'est une révolution dans la manière dont vous vivez la mode. Rejoignez des milliers d'utilisateurs qui ont déjà adopté l'essayage virtuel comme moyen novateur de choisir leurs vêtements en ligne.
+					Plongez dans l'avenir de la mode avec ModeTry, où chaque clic ouvre la porte à une expérience d'achat immersive, personnelle et durable. Bienvenue dans le futur de l'essayage virtuel en ligne. Bienvenue chez ModeTry.
+				</p>
+
+			</h4>
+			<div class="col mt-5">
+				<img src="{{ asset('assets/img/photos/bascket.webp') }}" class="jean">
+			</div>
+			<div class="col mt-5">
+				<img src="{{ asset('assets/img/photos/escarpin noir.webp') }}" class="jean">
+			</div>
 		</div>
 	</div>
-</div>{% endblock %}
+{% endblock %}
