--- a/Templates/components/navigation.html.twig
+++ b/Templates/components/navigation.html.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
 	<div class="container-fluid">
 		<a class="navbar-brand" href="{{ path('app_home') }}">
-			<img src="{{ asset('assets/img/icon/logo_final.png') }}" class="top-logo">
+			<img src="{{ asset('assets/img/icon/logo_final.png') }}" class="top-logo" alt= "logo du site modetryon">
 		</a>
 
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
