--- a/assets/styles/mode.css
+++ b/assets/styles/mode.css
@@ -22,7 +22,8 @@ main {
   
 h1{
   font-family: 'Montserrat', sans-serif !important;
-  margin: 50px 0;
+  margin: 0;
+  padding: 20px;
 }
 .wrapper {
   display: flex;
