--- a/Templates/produits/detailsProduits.html.twig
+++ b/Templates/produits/detailsProduits.html.twig
@@ -33,7 +33,7 @@
 				</a>
 				</form>
 				{% if commentaire is not empty %}
-					<h1>Commentaire</h1>
+					<h1>Commentaires</h1>
 					{% for commentaire in commentaire %}
 						<div class="comment mt-4 text-justify float-left">
 
