--- a/Templates/tailles/index.html.twig
+++ b/Templates/tailles/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TaillesController!{% endblock %}
+{% block title %}Tailles{% endblock %}
 
 {% block body %}
 <style>
