--- a/Templates/components/navigation.html.twig
+++ b/Templates/components/navigation.html.twig
@@ -40,7 +40,9 @@
 									<a class="dropdown-item" href="{{ path('app_categorie') }}">Ajout categories</a>
 								</li>
 								<li><hr class="dropdown-divider"></li>
-								
+								<li>
+									<a class="dropdown-item" href="{{ path('admin') }}">Gestion des utilisteurs</a>
+								</li>
 							</ul>
 						</li>
 						<li class="nav-item">
@@ -60,6 +62,7 @@
 					</li>
 				</ul>
 			</div>
+			
 
 		{% elseif is_granted('ROLE_USER') %}
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
